--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/strapi": "^0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
