chore: create example env needed for production

--- a/.env-production-example
+++ b/.env-production-example
@@ -1,2 +1,2 @@
-FRONTEND_URL=localhost:3000
-BACKEND_URL=localhost:1337
+FRONTEND_URL=https://your-frontend-url.ondigitalocean.app
+BACKEND_URL=https://your-backend-url.ondigitalocean.app
