--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "typography": "^0.16.21"
+    "typography": "^0.16.21",
+    "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
