--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "*.{css,vue}": "stylelint"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.2",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/markdownit": "^2.0.0",
@@ -43,8 +44,10 @@
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "node-sass": "^7.0.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "sass-loader": "^12.4.0",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0"
