--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/strapi": "^0.3.4",
+    "@nuxtjs/stylelint-module": "^4.1.0",
+    "@nuxtjs/vuetify": "^1.12.3",
     "@tailwindcss/typography": "^0.4.1",
+    "@tiptap/starter-kit": "^2.0.0-beta.164",
+    "@tiptap/vue-2": "^2.0.0-beta.73",
+    "@tiptap/vue-3": "^2.0.0-beta.85",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "tiptap-vuetify": "^2.24.0",
     "typography": "^0.16.21",
     "vue-carousel": "^0.18.0"
   },
@@ -36,20 +42,16 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "node-sass": "^7.0.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
-    "sass-loader": "^12.4.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0"
+    "sass": "^1.45.2",
+    "sass-loader": "10.1.1"
   }
 }
