--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nuxtjs/google-fonts": "^1.3.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "eslint": "^7.29.0",
+    "husky": "^7.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
