--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "*.{css,vue}": "stylelint"
   },
   "dependencies": {
-    "@braid/vue-formulate": "^2.5.2",
+    "@braid/vue-formulate": "^2.5.3",
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/strapi": "^0.3.4",
-    "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@tailwindcss/typography": "^0.4.1",
     "@tiptap/starter-kit": "^2.0.0-beta.164",
@@ -42,17 +41,19 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "eslint": "^7.29.0",
-    "husky": "^7.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "husky": "^7.0.4",
     "lint-staged": "^10.5.4",
     "node-sass": "^7.0.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "sass": "^1.45.2",
-    "sass-loader": "10.1.1"
+    "sass-loader": "10.1.1",
+    "stylelint": "^14.3.0"
   }
 }
